# LumenCite

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package.json  pdf-viewer.html  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml
.github/scripts/: connect-simplysign.ps1
.github/workflows/: ci.yml  release.yml  update-homebrew-tap.yml
design/design_handoff_chat_view/: CHAT_UI_BRIEF.md  Chat.html  README.md  chat-composer.jsx  chat-data.jsx  chat-icons.jsx  chat-main.jsx  chat-messages.jsx  chat-sidebar.jsx
design/design_handoff_detail_view/: README.md
design/design_handoff_detail_view/prototype/: Detail.html  detail-app.jsx
design/design_handoff_library_view/: README.md
design/design_handoff_library_view/prototype/: Library.html  app.jsx  data.jsx  detail.jsx  main.jsx  sidebar.jsx  table.jsx
docs/: API_SPEC.md  CODE_REVIEW_2026-07-11.md  DATA_MODEL.md  LCIR_design_overview.md  LumenCite_machine_readable_document_roadmap.md  RELEASE.md  SPEC.md
extension/: manifest.json  package.json  tsconfig.json
extension/public/: confirm.html  options.html
extension/public/_locales/en/: messages.json
extension/public/_locales/ja/: messages.json
extension/scripts/: copy-static.mjs
extension/src/: api.ts  background.ts  confirm.ts  connect-code.ts  extract.ts  options.ts  types.ts
extension/test/: connect-code.test.ts  extract.test.ts  fixtures-arxiv.html  real-page.test.ts
src/: App.tsx  index.css  main.tsx  pdf-viewer.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release-windows.conf.json
src-tauri/capabilities/: default.json  pdf-viewer.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_entries_fts.sql  0003_fulltext_trigram.sql  0004_starred_trash.sql  0005_highlights.sql  0006_entry_summary.sql  0007_chat.sql  0008_citation_key.sql  0009_authors_extended.sql  0010_mcp_audit_log.sql  0011_highlight_attachment.sql  0012_attachment_path_unique.sql  0013_identifier_canonical.sql  0014_lcir_foundation.sql  0015_document_nodes_fts.sql  0016_math_expressions.sql  0017_node_relations.sql  0018_symbols.sql  0019_assets.sql
src-tauri/src/: attachment_trash.rs  backup.rs  bibtex.rs  download.rs  keychain.rs  lib.rs  main.rs  mcp_shim.rs  metadata.rs  models.rs  orcid.rs  restore.rs  secretbox.rs
src-tauri/src/cli/: mod.rs  write.rs
src-tauri/src/db/: assets.rs  attachments.rs  authors.rs  chat.rs  collections.rs  document_nodes.rs  document_nodes_fts.rs  document_versions.rs  entries.rs  fulltext.rs  highlights.rs  math_expressions.rs  mcp_audit.rs  migrations_test.rs  mod.rs  node_relations.rs  settings.rs  source_fragments.rs  symbols.rs  tags.rs
src-tauri/src/document_ir/: asset.rs  math.rs  mod.rs  node.rs  relation.rs  schema.rs  source.rs  symbol.rs  validation.rs
src-tauri/src/document_ir/testdata/: minimal_lcir.json  structured_lcir.json
src-tauri/src/export/: markdown.rs  mod.rs
src-tauri/src/ingestion/: figures.rs  graph.rs  mod.rs  structure.rs  symbols.rs
src-tauri/src/ingestion/pdf/: mod.rs  pdfium.rs
src-tauri/src/ingestion/tex/: mod.rs  source.rs  tabular.rs
src-tauri/src/llm/: anthropic.rs  chat.rs  mod.rs  ocr.rs  openai.rs
src-tauri/src/llm/tools/: approval.rs  mod.rs  mutate.rs  ocr.rs  search.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/mcp_server/: clipper.rs  mod.rs
src/chat/: format.ts  messages.ts  store.ts
src/components/: AddSheet.tsx  AuthorChip.tsx  AuthorEditor.tsx  BibtexSyncSheet.tsx  BulkActionsPanel.tsx  CommandPalette.tsx  CoversGrid.tsx  DetailPanel.tsx  EditSheet.tsx  EntriesTable.tsx  ExtraFieldInputs.tsx  FilterPanel.tsx  FulltextResults.tsx  MathMarkdown.tsx  PdfViewer.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TagPill.tsx  Toolbar.tsx  icons.tsx
src/components/chat/: ChatIcon.tsx  ChatScreen.tsx  Composer.tsx  ContextPanel.tsx  EntryPicker.tsx  MessageBubble.tsx  MessageList.tsx  NewSessionDialog.tsx  ScopePicker.tsx  SessionHeader.tsx  SessionList.tsx  ToolCallCard.tsx
src/components/detail/: DetailView.tsx  Header.tsx  HighlightsTab.tsx  InfoTab.tsx  MetaPanel.tsx  NotesTab.tsx  PdfPane.tsx  PdfToolbar.tsx  RelatedTab.tsx  SummarySheet.tsx  Thumbnails.tsx
src/components/settings/: ChatSettingsTab.tsx
src/hooks/: useLanguage.ts  useTheme.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json
src/lib/: attachments.ts  models.ts  updater.ts
