[package]
name = "lumencite"
version = "0.1.0"
description = "Reference and bibliography management for researchers"
authors = ["Motoki Seki <marmot.motoki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/marmot1123/lumencite"
repository = "https://github.com/marmot1123/lumencite"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumencite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
nom-bibtex = "0.6"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2"
pdf-extract = "0.9"
tokio = { version = "1", features = ["sync", "time", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
futures-util = "0.3"
eventsource-stream = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
async-trait = "0.1"

