[package]
name = "lumencite"
version = "0.5.0"
description = "Reference and bibliography management for researchers"
authors = ["Motoki Seki <marmot.motoki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/marmot1123/lumencite"
repository = "https://github.com/marmot1123/lumencite"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumencite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
# `blocking` は Phase 3 の stdio shim（`--mcp-stdio`）用。shim は Tauri/tokio を起動せず
# plain main() で動くため、自前ランタイムを持つ blocking クライアントで localhost HTTP へ橋渡しする。
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
nom-bibtex = "0.6"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2"
# 起動時 DB 初期化失敗を Tauri イベントループ起動前に表示するためのネイティブダイアログ。
# tauri-plugin-dialog の blocking_show は run_on_main_thread 経由で setup 中はデッドロックするため、
# setup ではイベントループ非依存の rfd を直接使う。
# Linux backend は tauri-plugin-dialog と同じ gtk3 に固定する（default の xdg-portal と
# gtk3 が両立すると rfd の build.rs が "can't enable both" で panic するため）。
# gtk3 機能は mac/win では no-op、Linux は webkit2gtk-4.1-dev 経由で gtk+-3.0 が入る。
rfd = { version = "0.16", default-features = false, features = ["gtk3"] }
pdf-extract = "0.9"
tokio = { version = "1", features = ["sync", "time", "macros", "process", "io-util"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
futures-util = "0.3"
eventsource-stream = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
async-trait = "0.1"
# OCR: スキャン PDF のページラスタライズ（pdfium 動的ライブラリを実行時にロード）
pdfium-render = { version = "0.8", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
# v0.3.0: 著者名寄せの NFKC 正規化（漢字・全角・半角・合成済み/分解済み等価化）
unicode-normalization = "0.1"
# MCP サーバー（Phase 1）: localhost にバインドする軽量 HTTP サーバー。
# async DB 呼び出しは tauri::async_runtime::block_on で橋渡しするため、tokio の
# net/rt 機能追加や axum/hyper の重い依存は不要。
tiny_http = "0.12"
# v0.5.0: 更新通知（GitHub Releases の tag と現バージョンの semver 比較）
semver = "1"

